# etlr

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
src/etlr/: __init__.py  client.py  main.py
tests/: test_cli.py  test_commands.py
tests/fixtures/: example_workflow.yaml
tools/: auto_version_bump.py
